--- a/src/addressbook/gui/Create.fxml
+++ b/src/addressbook/gui/Create.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="addressbook.controller.Create">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="addressbook.gui.Create">
    <children>
       <Label layoutX="157.0" layoutY="138.0" text="Username:">
          <font>
@@ -38,7 +38,7 @@
             <Font size="25.0" />
          </font>
       </Label>
-      <Button layoutX="217.0" layoutY="284.0" mnemonicParsing="false" onAction="#createAccount" text="Create" />
+      <Button layoutX="217.0" layoutY="284.0" mnemonicParsing="false" text="Create" />
       <Button layoutX="352.0" layoutY="284.0" mnemonicParsing="false" text="Cancel" />
    </children>
 </AnchorPane>
